# sniprun

./: .buildinfo  .codecov.yml  .editorconfig  .gitignore  .gitmodules  .travis.yml  API.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  genindex.html  index.html  install.sh  objects.inv  quentin.rs  quentin2.rs  r.mkv  scrollbar_0  search.html  searchindex.js  test.py  test.rs
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  support-for--language-.md
.github/workflows/: cov.yml  doc.yml  release.yml  rust.yml
_sources/: index.rst.txt
_sources/sources/: README.md.txt  display_modes.md.txt
autoload/health/: sniprun.vim
doc/: Ada_original.md  Bash_original.md  C_original.md  Cpp_original.md  FSharp_Original.md  GFM_original.md  Go_original.md  Julia_jupyter.md  Lua_nvim.md  Lua_original.md  Mathematica_original.md  OrgMode_original.md  Prolog_gnu.md  Python3_fifo.md  Python3_jupyter.md  Python3_original.md  README.md  Sage_fifo.md  TypeScript_original.md  build.sh  conf.py  index.rst  sniprun.txt
doc/sources/: Clojure_fifo.md  Cpp_original.md  Haskell.md  JS_TS_deno.md  Lua_nvim.md  Lua_original.md  Prolog_original.md  Python3_original.md  README.md  Rust_original.md  common_options.md  display_modes.md
docs/: build.sh  conf.py  index.rst  sniprun.txt
docs/sources/: README.md  display_modes.md
lua/: sniprun.lua
lua/sniprun/: api.lua  display.lua  input.lua  live_mode.lua
plugin/: sniprun.vim
ressources/: CONTRIBUTING_REPL.md  api.md  asciiart.txt  d_install.sh  demo_display.py  display_classic.md  display_floating_window.md  display_notify.md  display_terminal.md  display_virtualtext.md  gitscript.sh  go_install.sh  infofile.txt  infoscript.sh  init_repl.sh  install_all_compilers_ci.sh  launcher_repl.sh  list_script.sh  live_mode.md  old_configuration.md  python_server.py  runner  sync_repl.sh  vroomtests.sh
ressources/visual_assets/: logo-only.xcf  logo-transparent.xcf  logo.xcf
sources/: README.html  common_options.html  display_modes.html
sources/interpreters/: Ada_original.html  Bash_original.html  CS_original.html  CSharp_original.html  C_original.html  Clojure_fifo.html  Cpp_original.html  D_original.html  Elixir_original.html  FSharp_fifo.html  GFM_original.html  Generic.html  Go_original.html  Haskell.html  Http_original.html  (+24 more)
src/: daemonizer.rs  display.rs  error.rs  input.rs  interpreter.rs  launcher.rs  lib.rs  main.rs  test.rs
test/: test.rs  unindent.rs
tests/: integration.rs
vroom-tests/: bloc-rust.vroom  echo.vroom  hello.vroom  python-print.vroom  snipinfo.vroom
(+137 files in other folders)
