[package]
name = "sniprun"
version = "1.3.12"
authors = ["michaelb <michael.bleuez2@gmail.com>"]
rust-version = "1.65"
edition = "2018"

[features]
ignore_in_ci = []

[profile.release]
strip = true

[build-dependencies]
# cc="*"

[dependencies]
neovim-lib = "0.6.1"
log = "0.4.18"
log-panics = { version = "2", features = ["with-backtrace"] }
simple-logging = "2.0"
close_fds = "0.3"
thiserror = "1.0"
dirs = "5.0"
regex = "1.0"                                                 # up-to-date-regex needs a more recent Rust version
strip-ansi-escapes = "0.2"
libc = "0.2.79"
serial_test = "2.0"

# jupyter-client = { git = "https://gitlab.com/srwalker101/rust-jupyter-client.git", branch = "dev" }


# Python3 interpreter
unindent = "0.2"

# Http interpreter
ureq = { version = "2", features = ["json", "native-certs"] }
http-rest-file = "0.5.1"
