[package]
name = "sniprun"
version = "1.3.17"
authors = ["michaelb <michael.bleuez2@gmail.com>"]
rust-version = "1.65"
edition = "2018"

[features]
ignore_in_ci = []

[profile.release]
strip = true

[build-dependencies]
# cc="*"

[dependencies]
neovim-lib = "0.6.1"
log = "0.4.18"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
simple-logging = "2.0.2"
close_fds = "0.3.2"
thiserror = "1.0.69"
dirs = "5.0.1"
regex = "1.11.1"     # up-to-date-regex needs a more recent Rust version
strip-ansi-escapes = "0.2.0"
libc = "0.2.79"
serial_test = "2.0.0"

# jupyter-client = { git = "https://gitlab.com/srwalker101/rust-jupyter-client.git", branch = "dev" }

rmp = "=0.8.8" # fix rmp version because it breaks MSRV

# Python3 interpreter
unindent = "0.2.3"

# Http interpreter
ureq = { version = "=2.9.0", features = ["json", "native-certs"] }
http-rest-file = "=0.5.0"
url = "=2.4.0"
